<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_auth">

    <fragment
        android:id="@+id/nav_auth"
        android:name="fragments.AuthFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_auth" />

    <fragment
        android:id="@+id/nav_rooms"
        android:name="fragments.RoomsBrowserFragment"
        android:label="@string/menu_rooms"
        tools:layout="@layout/fragment_rooms_browser" />

    <fragment
        android:id="@+id/nav_create_room"
        android:name="fragments.CreateRoomFragment"
        android:label="@string/menu_create_room"
        tools:layout="@layout/fragment_create_room" />

    <fragment
        android:id="@+id/nav_results"
        android:name="fragments.ResultsBrowserFragment"
        android:label="@string/menu_results"
        tools:layout="@layout/fragment_results_browser" />

    <fragment
        android:id="@+id/nav_result"
        android:name="fragments.ResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/nav_room_admin"
        android:name="fragments.RoomAdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_room_admin" />

    <fragment
        android:id="@+id/nav_room_user"
        android:name="fragments.RoomUserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_room_user" />

</navigation>