<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragments.ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomNameTitle"/>
        <TextView
            android:id="@+id/tvRoomNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomThemeTitle"/>
        <TextView
            android:id="@+id/tvRoomThemeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomAverageTitle"/>
        <TextView
            android:id="@+id/tvRoomAverageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomAverage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomDateTitle"/>
        <TextView
            android:id="@+id/tvRoomDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomDate"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/rv_user" />
</LinearLayout>