<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.AuthFragment"
    android:orientation="vertical"
    android:padding="25dp"
    android:layout_margin="5dp"
    android:gravity="center"
    android:id="@+id/ll">

    <EditText
        android:id="@+id/etServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/etServerHint"
        android:inputType="text"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etRoomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/etLoginHint"
        android:inputType="text" />

    <EditText
        android:id="@+id/etRoomPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/etPasswordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLoginText" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegisterText" />
</LinearLayout>