<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRoomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRoomName"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTheme" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDate" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAverage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/tvAverage" />
</RelativeLayout>