<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.CreateRoomFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp"
    android:padding="35dp" >

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etRoomName"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etRoomPassword"
        android:inputType="text"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnLoginToRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCreateText"/>
</LinearLayout>